added js (checkRemove)

--- a/todolist.html
+++ b/todolist.html
@@ -19,7 +19,7 @@
             <!-- create our form -->
             <form>
                 <input type="text" class="todo-input">
-                <button class="todo-btn">
+                <button class="todo-btn" type="submit ">
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
                 </button>
             </form>
@@ -34,13 +34,16 @@
         </div>
     
         <div class="todo-container">
-            <div class="to-do">
-                <li>task one</li>
-                <span><i class="fa-sharp fa-solid fa-circle-check"></i></span>
-                <span><i class="fa-sharp fa-solid fa-xmark"></i></span>
-            </div>
+            <ul class="todolist">
+                <div class="todo">
+                    <li>task 1</li>
+                    <span><i class="fa-sharp fa-solid fa-circle-check"></i></span>
+                    <span><i class="fa-sharp fa-solid fa-xmark"></i></span>
+                </div>
+            </ul>
+
         </div>
     </section>
-    
+    <script src="toDoList.js "></script>
 </body>
 </html>
