--- a/todolist.html
+++ b/todolist.html
@@ -26,24 +26,23 @@
             <!-- creat select option -->
             <div class="select">
                 <select name="todos" class="filter-todos">
-                    <option class="all">all</option>
-                    <option class="completed">completed</option>
-                    <option class="uncompleted">uncompleted</option>
+                    <option value="all">all</option>
+                    <option value="completed">completed</option>
+                    <option value="uncompleted">uncompleted</option>
                 </select>
             </div>
         </div>
     
         <div class="todo-container">
             <ul class="todolist">
-                <div class="todo">
+                <!-- <div class="todo">
                     <li>task 1</li>
                     <span><i class="fa-sharp fa-solid fa-circle-check"></i></span>
                     <span><i class="fa-sharp fa-solid fa-xmark"></i></span>
-                </div>
+                </div> -->
             </ul>
-
         </div>
     </section>
-    <script src="toDoList.js "></script>
+    <script src="todoList.js "></script>
 </body>
 </html>
