--- a/todolist.html
+++ b/todolist.html
@@ -19,8 +19,11 @@
             <!-- create our form -->
             <form>
                 <input type="text" class="todo-input">
-                <button class="todo-btn" type="submit ">
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                <button class="todo-btn" type="submit">
+                    <i class="fas fa-plus-circle"></i>
+                </button>
+                <button class="clear-btn" type="button">
+                    Clear
                 </button>
             </form>
             <!-- creat select option -->
